# aoc-2025

./: Cargo.toml  rustc-ice-2025-12-04T20_13_12-198425.txt
puzzles/day-01-part-01/: Cargo.toml
puzzles/day-01-part-01/src/: main.rs
puzzles/day-01-part-02/: Cargo.toml
puzzles/day-01-part-02/benches/: solve_benchmark.rs
puzzles/day-01-part-02/src/: lib.rs  main.rs
puzzles/day-02-part-01/: Cargo.toml
puzzles/day-02-part-01/src/: main.rs
puzzles/day-02-part-02/: Cargo.toml
puzzles/day-02-part-02/benches/: solve_benchmark.rs
puzzles/day-02-part-02/src/: lib.rs  main.rs
puzzles/day-03-part-01/: Cargo.toml
puzzles/day-03-part-01/benches/: solve_benchmark.rs
puzzles/day-03-part-01/src/: lib.rs  main.rs
puzzles/day-03-part-02/: Cargo.toml
puzzles/day-03-part-02/benches/: solve_benchmark.rs
puzzles/day-03-part-02/src/: lib.rs  main.rs
puzzles/day-04-part-01/: Cargo.toml
puzzles/day-04-part-01/benches/: solve_benchmark.rs
puzzles/day-04-part-01/src/: lib.rs  main.rs
puzzles/day-04-part-02/: Cargo.toml
puzzles/day-04-part-02/benches/: solve_benchmark.rs
puzzles/day-04-part-02/src/: lib.rs  main.rs
puzzles/day-05-part-01/: Cargo.toml
puzzles/day-05-part-01/benches/: solve_benchmark.rs
puzzles/day-05-part-01/src/: lib.rs  main.rs
puzzles/day-05-part-02/: Cargo.toml
puzzles/day-05-part-02/benches/: solve_benchmark.rs
puzzles/day-05-part-02/src/: lib.rs  main.rs
puzzles/day-06-part-01/: Cargo.toml
puzzles/day-06-part-01/benches/: solve_benchmark.rs
puzzles/day-06-part-01/src/: lib.rs  main.rs
puzzles/day-06-part-02/: Cargo.toml  bench-result.txt  run-result.txt
puzzles/day-06-part-02/benches/: solve_benchmark.rs
puzzles/day-06-part-02/src/: lib.rs  main.rs
puzzles/day-07-part-01/: Cargo.toml
puzzles/day-07-part-01/benches/: solve_benchmark.rs
puzzles/day-07-part-01/src/: lib.rs  main.rs
puzzles/day-07-part-02/: Cargo.toml  bench-result.txt  run-result.txt
puzzles/day-07-part-02/benches/: solve_benchmark.rs
puzzles/day-07-part-02/src/: lib.rs  main.rs
puzzles/day-08-part-01/: Cargo.toml
puzzles/day-08-part-01/benches/: solve_benchmark.rs
puzzles/day-08-part-01/src/: lib.rs  main.rs
puzzles/day-08-part-02/: Cargo.toml  result.txt
puzzles/day-08-part-02/benches/: solve_benchmark.rs
puzzles/day-08-part-02/src/: lib.rs  main.rs
puzzles/day-09-part-01/: Cargo.toml
puzzles/day-09-part-01/benches/: solve_benchmark.rs
puzzles/day-09-part-01/src/: lib.rs  main.rs
puzzles/day-09-part-02/: Cargo.toml  bench.txt  result.txt
puzzles/day-09-part-02/benches/: solve_benchmark.rs
puzzles/day-09-part-02/src/: lib.rs  main.rs
puzzles/day-10-part-01/: Cargo.toml
puzzles/day-10-part-01/benches/: solve_benchmark.rs
puzzles/day-10-part-01/src/: lib.rs  main.rs
puzzles/day-10-part-02/: Cargo.toml
puzzles/day-10-part-02/benches/: solve_benchmark.rs
puzzles/day-10-part-02/src/: lib.rs  main.rs
puzzles/day-11-part-01/: Cargo.toml
puzzles/day-11-part-01/benches/: solve_benchmark.rs
puzzles/day-11-part-01/src/: lib.rs  main.rs
puzzles/day-11-part-02/: Cargo.toml
puzzles/day-11-part-02/benches/: solve_benchmark.rs
puzzles/day-11-part-02/src/: lib.rs  main.rs
puzzles/day-12-part-01/: Cargo.toml
puzzles/day-12-part-01/benches/: solve_benchmark.rs
puzzles/day-12-part-01/src/: lib.rs  main.rs
puzzles/one/: Cargo.toml
