[workspace]
resolver = "3"
members = [
    "puzzles/day-01-part-01",
    "puzzles/day-01-part-02",
    "puzzles/day-02-part-01",
    "puzzles/day-02-part-02",
    "puzzles/day-03-part-01",
    "puzzles/day-03-part-02",
    "puzzles/day-04-part-01",
    "puzzles/day-04-part-02",
    "puzzles/day-05-part-01",
    "puzzles/day-05-part-02",
    "puzzles/day-06-part-01",
    "puzzles/day-06-part-02",
    "puzzles/day-07-part-01",
    "puzzles/day-07-part-02",
    "puzzles/day-08-part-01",
    "puzzles/day-08-part-02",
    "puzzles/day-09-part-01",
    "puzzles/day-09-part-02",
    "puzzles/day-10-part-01",
    "puzzles/day-10-part-02",
    "puzzles/day-11-part-01",
    "puzzles/day-11-part-02",
    "puzzles/day-12-part-01",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
rstest = "0.26.1"
rayon = "1.11.0"
mimalloc = "0.1.48"
criterion = "0.6"
wide = "1.0.2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
overflow-checks = false
# debug = true
