[package]
name = "day-11-part-02"
version.workspace = true
edition.workspace = true

[dependencies]
rayon.workspace = true
mimalloc = { workspace = true, features = ["v3"] }
indoc = "2.0.7"
good_lp = { version = "1.10", default-features = false, features = ["microlp"] }

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true

[[bench]]
name = "solve_benchmark"
harness = false
